Make Struct class implement MemorySegment